# MatlabPlotter

./: .travis.yml  CHANGELOG.md  README.md  matlab_plotter.h
example/: CMakeLists.txt  example.m  matlab_plotter.h  natcsi.cpp
example2/: CMakeLists.txt  legendre.cpp  legendre.m  matlab_plotter.h
testing/: build_examples.sh  run_examples.sh
